# ft_printf

./: CMakeLists.txt  Makefile  main.c
headers/: ft_printf.h
libft/: Makefile  ft_strchr.c  ft_strsub.c  libft.h.gch
src/: any_octal_to_str.c  any_signed_dec_to_str.c  any_unsigned_dec_to_str.c  calculate_argument_lenth.c  cast_hex.c  char.c  choose_datatype_handler.c  count_spaces.c  count_uni_string_len.c  digit_len.c  duplicate_array.c  fetch_data.c  flags.c  ft_itoa_base.c  ft_putnbr_unsign.c  hex.c  int_to_sign_dec.c  int_to_unsign_dec.c  intmax_t_toa.c  itoa_base_size.c  long_long_toa.c  long_toa.c  mainloop.c  masks_for_unicode.c  octal.c  precision.c  preparation_string.c  print_any_string.c  print_char.c  print_hex.c  print_letter.c  print_octal.c  print_prcision.c  print_sign_dec.c  print_string.c  print_uni_char.c  print_uni_string.c  print_unsign_dec.c  print_usig_dec.c  print_width.c  (+18 more)
